--- a/index.html
+++ b/index.html
@@ -47,10 +47,48 @@
             </div>
             <div class="feature-right">
                 <h2 class="feature-title"><span id="quick-list">Quick list</span> <span class="of-our">of Our</span>
-                    <span class="feature">Features</span></h2>
+                    <span class="feature">Features</span>
+                </h2>
                 <p class="feature-description">There are many variations of passages of available, but the majority have
                     suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+        <!-- feature-love -->
+        <section class="feature-love">
+           
+            <div class="feature-love-container display-flex ">
+                <div class="f-l-c">
+                    <div class="left-side-top">
+                        <h1 id="feature-love" class="feature-love-title">Features you will love & enjoy</h1>
+                        <p class="feature-love-description">There are many variations of passages of available, but
+                            the majority have suffered alteration in some form, by injected humour, or randomised words which
+                            don't look even</p>
+                    </div>
+                    <div class="left-side">
+                        <h3 class="left-side-title">Dexktop & Mobile Version</h3>
+                        <p class="left-side-description">There are many variations of passages of available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="left-side">
+                        <h3 class="left-side-title">Dexktop & Mobile Version</h3>
+                        <p class="left-side-description">There are many variations of passages of available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="left-side">
+                        <h3 class="left-side-title">Dexktop & Mobile Version</h3>
+                        <p class="left-side-description">There are many variations of passages of available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="left-side">
+                        <h3 class="left-side-title">Dexktop & Mobile Version</h3>
+                        <p class="left-side-description">There are many variations of passages of available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                </div>
+                <div class="right-side">
+                    <img class="right-side-img" src="images/architect.png" alt="">
+                    <button id="experience-badge" class="btn-primary">
+                        <span id="experience-year">10+ Years </span>
+                        <br><span>Experience</span>
+                    </button>
+                </div>
             </div>
         </section>
         <!-- SOme facts -->
