--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <img src="images/banner.png" alt="" class="banner-img">
         </div>
     </header>
-    <main>
+    <main class="stylish">
         <section class="feature-page display-flex ">
             <div class="feature-left">
                 <img src="images/team1.png" alt="" class="feature-team-img">
@@ -143,8 +143,8 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
-        <p class="footer-description">All rights reserved copyright@2023 startup landing page design</p>
+    <footer class="footer  ">
+        <p class="footer-description ">All rights reserved copyright@2023 startup landing page design</p>
 
     </footer>
 </body>
